[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Marie <marie.marcos25@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.0"
pandas = "^1.3.1"
matplotlib = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
